# DynamicsLearning

./: .cursorrules  .gitignore
EmbeddedSystem/: Mujoco_Discrete_model_train copy.ipynb  Mujoco_finetuned_model_2024_12_8_8_31_LoRA.pth  Mujoco_finetuned_model_2024_12_8_8_31_fulltraining.pth  Mujoco_model.pth  Mujoco_model_v2.pth  RobotModel.py  model_finetuning.ipynb  model_full_training_test.ipynb
RC/: .~lock.data.csv#  10-scale_car_data.py  Data visualization and b spline interpolation.ipynb  Mujoco_Discrete_model_train.ipynb  Mujoco_ackermann_data.py  Mujoco_model.pth  Mujoco_random_goal_pub.py  SplineBasedDynamicsLearning.ipynb  SplineBasedDynamicsLearning_C5.ipynb  SteerMap.ipynb  accel_map_50.csv  accel_map_60.csv  accel_map_70.csv  accel_map_80.csv  accel_map_90.csv  best_model.pth  best_model_below_threshold.pth  convert.ipynb  data.csv  dataset.py  free_drive.csv  load_data.csv  mpc.py  robot_dynamics_model.onnx  robot_dynamics_model_training.ipynb  steer_map_400.csv  steer_map_500.csv  torch_to_onnx.ipynb
RC/Bspline/: BsplineLie.py  test.py
RC/Data/: C5_night_test_2.csv  Mujoco.csv  Mujoco2.csv  Mujoco_dump.csv  Mujoco_less_friction.csv  Mujoco_less_friction2.csv  Mujoco_less_friction3.csv  Mujoco_less_friction_random.csv  Mujoco_less_friction_random2.csv  Mujoco_less_friction_random3.csv  Mujoco_less_friction_random4.csv  Mujoco_less_friction_track_NNmppi.csv  Mujoco_less_friction_track_NNmppi2.csv  Mujoco_less_friction_track_NNmppi3.csv  Mujoco_less_friction_track_manual.csv  slip_tire.csv  tile_data.csv  (+8 more)
RC/cpp/: CMakeLists.txt  bspline_example.cpp
(+43 files in other folders)
